@@ -1,1 +1,8 @@
 # Attack-on-Titan
+
+If you guys wish to run the program, pls add these two lines
+
+--module-path path-to-javafx-lib-folder
+--add-modules javafx.controls,javafx.fxml,javafx.swing
+
+to VM option before running the program.
